<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_encoding"
        android:entries="@array/pref_encoding_titles"
        android:entryValues="@array/pref_encoding_values"
        android:key="encoding"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_encoding" />

    <SwitchPreference
        android:key="showPic"
        android:defaultValue="true"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_show_pic"
        android:summary="@string/pref_desc_show_pic"/>
</PreferenceScreen>
